--- a/css/style.css
+++ b/css/style.css
@@ -174,14 +174,28 @@ button:hover {
     gap: 10px;
     margin-top: 10px;
   }
+  h3{
+    color: rgb(48, 48, 48);
+    font-size: 30px;
+    text-align: center;
+    font-family: "Bitcount Grid Double", system-ui;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+    "slnt" -4;
+    "CRSV" 0.5,
+    "ELSH" 0,
+    "ELXP" 0;
+}
 
   .logo {
-    max-width: 100px;
+    max-width: 200px;
     margin: 0 auto;
   }
 
   .imagens {
-  max-width: 100px;
+  max-width: 200px;
   display: block;
   margin: 0 auto 10px;
   }
