--- a/css/style.css
+++ b/css/style.css
@@ -174,9 +174,31 @@ button:hover {
     gap: 10px;
     margin-top: 10px;
   }
+  h1{
+    color: whitesmoke;
+    font-size: 10px;
+    text-align: center;
+    font-family: "Bitcount Grid Double", system-ui;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    font-variation-settings:
+    "slnt" -4;
+    "CRSV" 0.5,
+    "ELSH" 0,
+    "ELXP" 0;
+    line-height: 150%;
+    text-shadow:8px 8px 20px rgb(0, 65, 206);
+}
+
+h2{
+    color: rgb(48, 48, 48);
+    font-size: 10px;
+    text-align: center;
+}
   h3{
     color: rgb(48, 48, 48);
-    font-size: 30px;
+    font-size: 10px;
     text-align: center;
     font-family: "Bitcount Grid Double", system-ui;
     font-optical-sizing: auto;
