--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ header {
 
 .logo {
   max-height: max-content;
-  height: auto;
+  height: 500px;
   display: block;
   margin: 0 auto 10px;
   border-radius: 6px;
